# PyOZ

./: .gitignore  CHANGELOG.md  README.md  build.zig  build.zig.zon  mkdocs.yml
.github/workflows/: ci.yml  release.yml
docs/: index.md  installation.md  quickstart.md
docs/assets/: extra.css
docs/cli/: build.md  configuration.md  init.md
docs/examples/: complete-module.md
docs/guide/: classes.md  enums.md  errors.md  functions.md  gil.md  numpy.md  properties.md  stubs.md  submodules.md  types.md
docs/overrides/partials/: copyright.html
docs/reference/: api.md
examples/: example_module.zig
pypi/: README.md  build.zig  build.zig.zon  build_wheels.py  pyproject.toml  setup.cfg
pypi/pyoz/: __init__.py  __main__.py  backend.py
pypi/src/: lib.zig
src/: tests.zig  tests_abi3.zig  version.zig
src/cli/: builder.zig  commands.zig  project.zig
src/lib/: conversion.zig  enums.zig  errors.zig  exceptions.zig  gil.zig  python.zig  ref.zig  root.zig  stubs.zig  wrappers.zig
src/lib/class/: attributes.zig  callable.zig  comparison.zig  descriptor.zig  iterator.zig  lifecycle.zig  mapping.zig  methods.zig  mod.zig  number.zig  properties.zig  repr.zig  sequence.zig
src/lib/python/: mod.zig  module.zig  typecheck.zig
src/lib/types/: buffer.zig
