[project]
name = "pyoz"
version = "0.10.2"
description = "Python extension modules in Zig, made easy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Daniele Linguaglossa" },
]
keywords = ["zig", "python", "extension", "native", "binding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://pyoz.dev"
Documentation = "https://pyoz.dev"
Repository = "https://github.com/pyozig/PyOZ"
Issues = "https://github.com/pyozig/PyOZ/issues"
Changelog = "https://pyoz.dev/changelog"

[project.scripts]
pyoz = "pyoz:main"
